# ai-test-system

./: .coveragerc  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BUGFIX_PIPELINE_START.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  OPTIMIZATION_STATUS.md  QUICKSTART.md  README.md  REMAINING_WORK_REPORT.md  REMOVED_FILES.md  alembic.ini  cli.py  config.glm.yaml  config.production.yaml  config.yaml  dev.sh  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_ai_agent_suite.sh
.github/workflows/: security-audit.yml  test.yml
core/: __init__.py  config_loader.py  errors.py  llm_cache.py  llm_client.py  llm_gateway.py  llm_gateway_enhanced.py  llm_usage.py  logger.py  metrics.py  multi_tenant.py  pipeline.py  prompt_loader.py  utils.py
core/kb/: __init__.py  dynamic_kb_manager.py  kb_manager.py  kb_manager_mcp.py  mcp_client.py
core/prompts/: case_review.md  requirement_analysis.md  requirement_gap_analysis.md  (+3 more)
db/: __init__.py  models.py  repository.py  session.py
deploy/: alertmanager.example.yml  alerts.yml  backup_cron.example
docs/: ALERTING.md  BACKUP.md  LOG_COLLECTION.md  OPTIMIZATION_ROADMAP.md  PIPELINE_OPTIMIZATION_REPORT.md  POSTGRESQL_MIGRATION.md  PRR_REMEDIATION.md  PRR_SESSION_2025_07_22.md  RUNBOOK.md  SOUL.md  Sprint 6.1 前后端彻底分离与 Vue 3 重构.md  UI_REFACTOR_MINIMAL_MATRIX.md  UI_RESEARCH_DESIGN_IMPROVEMENTS.md  UI_RESEARCH_LLM_CONFIG.md  UI_UX_RESEARCH_ADMIN_OVERHAUL.md  file-analysis.md  integration-extension-guide.md  optimization-backlog.md  phase2-completion-report.md  pipeline_validation_report.md  qa-coverage-assessment-r2.md  qa-test-report.md  requirements.md  webui-design.md
examples/: demo_requirements.md  ecommerce_kb_pitfalls.md  ecommerce_order.md  order_requirements.md
integrations/: __init__.py  base.py  bridge.py  field_mapper.py  models.py  registry.py  service.py
knowledge-base/: index.json  knowledge-context-demo.md
sample-output/: clarification_needed.md  requirements_quality_report.md  test_report.md  testcases.xlsx  testcases.xmind  testcases_executed.xlsx  testpoints.md  testpoints_extended.md
scripts/: backup_postgres.sh  backup_sqlite.sh  build_static.py  clean_uploads.py  clean_workspace.py  cleanup_unattended.sh  common.py  db_backup.py  export_pytest.py  generate_excel.py  generate_execution_guide.py  generate_report.py  generate_xmind.py  kb_manager.py  kb_manager_mcp.py  mcp_client.py  migrate_to_obsidian.py  test_obsidian_api.py  test_obsidian_https.py  test_obsidian_list_format.py  test_obsidian_search.py
test-run/: prototype.md  requirements.md  requirements_v2.md
tests/: conftest.py  mock_testrail.py  test_api_endpoints.py  test_auth.py  test_auth_jwt.py  test_boundary.py  test_bugfix_regression.py  test_cli.py  test_common.py  test_config_loader.py  test_db_persistence.py  test_error_toast_handling.js  test_excel_reader.py  test_file_lock.py  test_integration_bridge.py  test_integration_runtime.py  test_integrations_service.py  test_llm_gateway.py  test_login_lockout.py  test_perf_security_supplement.py  test_performance.py  test_phase3_async.py  test_pipeline_api.py  test_pipeline_progress_e2e.py  test_pipeline_progress_template.py  test_prometheus_metrics.py  test_security.py  test_task_manager.py  test_xmind.py
web/: __init__.py  app.py
webui/: VERSION_4_DEPLOYMENT.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  vite.config.js  vite.config.ts
(+293 files in other folders)
