[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-test-system"
version = "2.0.0"
description = "AI 测试用例生成系统 — 从需求到测试报告的全流程自动化"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AI Test System"},
]
keywords = ["testing", "test-case-generation", "ai", "llm", "automation", "qa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

# ─── 核心依赖（CLI + Pipeline 引擎必需）───
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
]

# ─── 可选依赖组 ───

[project.optional-dependencies]

# WebUI（FastAPI + Jinja2 + SSE）
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",   # 文件上传
    "sse-starlette>=1.6",        # SSE 端点
    "rcssmin>=1.1",       # CSS 压缩
    "rjsmin>=1.2",        # JS 压缩
]

# XMind 格式输出
xmind = [
    "xmind>=1.2",
    "openpyxl>=3.1",
]

# Excel 格式输出（generate_excel / generate_report 脚本）
excel = [
    "openpyxl>=3.1",
]

# 持久化层（SQLAlchemy + Alembic）
db = [
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
]

# 生产加固（结构化日志 + 限流 + 可观测性）
production = [
    "structlog>=24.1",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
]

# 开发与测试工具链
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
    "pip-audit>=2.7",
]

# 全量安装（除 dev 外的全部可选组）
all = [
    "ai-test-system[web,xmind,excel,db,production]",
]

# 开发全量（all + dev）
dev-all = [
    "ai-test-system[all,dev]",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-test-system"
Documentation = "https://github.com/your-org/ai-test-system/docs"
Issues = "https://github.com/your-org/ai-test-system/issues"

[project.scripts]
ai-test = "cli:main"

# ─── 工具配置 ───

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# 默认跳过 slow 测试（真实 LLM/Pipeline/Web 端到端测试，耗时长）。
# 单独触发：`pytest -m slow`；全部跑：`pytest -m ""`
addopts = ["-m", "not slow"]
# async 测试自动收集（event_bus / llm_gateway 等异步测试需要）
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top of file (FastAPI/Alembic sys.path pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "web", "scripts", "integrations", "db"]

[tool.ruff.lint.per-file-ignores]
# 测试代码中允许未使用的局部变量（F841）：常见于"赋值为触发 fixture/副作用"
# 或保留供断言调试的场景，强行删除反而可能破坏测试意图。
"tests/**" = ["F841"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["xmind.*", "openpyxl.*"]
ignore_missing_imports = true

# ─── setuptools 包发现 ───

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["core*", "web*", "scripts*", "integrations*", "db*"]
